[gd_scene load_steps=11 format=2]

[ext_resource path="res://Tileset.tres" type="TileSet" id=1]
[ext_resource path="res://spr_newplaybutton.png" type="Texture" id=2]
[ext_resource path="res://TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://spr_stevenface.png" type="Texture" id=6]
[ext_resource path="res://spr_smallsteven.png" type="Texture" id=7]
[ext_resource path="res://spr_logo_stevio.png" type="Texture" id=9]
[ext_resource path="res://spr_logo_super.png" type="Texture" id=10]
[ext_resource path="res://spr_66.png" type="Texture" id=11]
[ext_resource path="res://snd_title2.ogg" type="AudioStream" id=12]
[ext_resource path="res://spr_splash.png" type="Texture" id=13]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1027.0
margin_bottom = 592.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="splash" type="Sprite" parent="."]
position = Vector2( 172.038, 544.528 )
scale = Vector2( 0.701715, 0.701715 )
texture = ExtResource( 13 )

[node name="Particles2D" type="CPUParticles2D" parent="."]
position = Vector2( 509.117, 567.1 )
amount = 128
lifetime = 8.0
texture = ExtResource( 7 )
direction = Vector2( 0, -1 )
initial_velocity = 301.08
initial_velocity_random = 0.18
angular_velocity = 720.0
angular_velocity_random = 1.0
color = Color( 0.356863, 0.356863, 0.356863, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -1, 2, 0, -65536, 2, 131073, -65535, 2, 131076, -65534, 2, 131073, -65533, 2, 131076, -65532, 2, 131073, -65531, 2, 131073, -65530, 2, 131073, -65529, 2, 131076, -65528, 2, 131076, -65527, 2, 131076, -65526, 2, 131076, -65525, 2, 131076, -65524, 2, 131076, -65523, 2, 131073, -65522, 2, 131073, -65521, 2, 131073, -65520, 2, 131076, -65519, 2, 131076, -65518, 2, 131076, -65517, 2, 131076, -65516, 2, 131076, -65515, 2, 131076, -65514, 2, 131073, -65513, 2, 131076, -65512, 2, 131076, -65511, 2, 131076, -65510, 2, 131076, -65509, 2, 131076, -65508, 2, 131073, -65507, 2, 131073, -65506, 2, 131073, -65505, 2, 131073, -65504, 2, 1, 65535, 2, 65538, 0, 2, 196611, 1, 2, 196609, 2, 2, 196609, 3, 2, 196609, 4, 2, 196612, 5, 2, 196609, 6, 2, 196612, 7, 2, 196612, 8, 2, 196612, 9, 2, 196609, 10, 2, 196609, 11, 2, 196612, 12, 2, 196612, 13, 2, 196612, 14, 2, 196612, 15, 2, 196609, 16, 2, 196609, 17, 2, 196609, 18, 2, 196609, 19, 2, 196612, 20, 2, 196612, 21, 2, 196612, 22, 2, 196612, 23, 2, 196609, 24, 2, 196612, 25, 2, 196612, 26, 2, 196609, 27, 2, 196609, 28, 2, 196612, 29, 2, 196609, 30, 2, 196609, 31, 2, 196610, 32, 2, 65539, 131071, 2, 65538, 65536, 2, 65539, 65567, 2, 65538, 65568, 2, 65539, 196607, 2, 65538, 131072, 2, 65539, 131103, 2, 65538, 131104, 2, 65539, 262143, 2, 65538, 196608, 2, 65539, 196639, 2, 65538, 196640, 2, 65539, 327679, 2, 65538, 262144, 2, 65539, 262175, 2, 65538, 262176, 2, 65539, 393215, 2, 65538, 327680, 2, 65539, 327711, 2, 65538, 327712, 2, 65539, 458751, 2, 65538, 393216, 2, 65539, 393247, 2, 65538, 393248, 2, 65539, 524287, 2, 65538, 458752, 2, 65539, 458783, 2, 65538, 458784, 2, 65539, 589823, 2, 65538, 524288, 2, 65539, 524319, 2, 65538, 524320, 2, 65539, 655359, 2, 65538, 589824, 2, 65539, 589855, 2, 65538, 589856, 2, 65539, 720895, 2, 65538, 655360, 2, 65539, 655391, 2, 65538, 655392, 2, 65539, 786431, 2, 65538, 720896, 2, 65539, 720927, 2, 65538, 720928, 2, 65539, 851967, 2, 65538, 786432, 2, 65539, 786463, 2, 65538, 786464, 2, 65539, 917503, 2, 65538, 851968, 2, 65539, 851999, 2, 65538, 852000, 2, 65539, 983039, 2, 65538, 917504, 2, 65539, 917535, 2, 65538, 917536, 2, 65539, 1048575, 2, 65538, 983040, 2, 65539, 983071, 2, 65538, 983072, 2, 65539, 1114111, 2, 65538, 1048576, 2, 65539, 1048607, 2, 65538, 1048608, 2, 65539, 1179647, 2, 65538, 1114112, 2, 65539, 1114143, 2, 65538, 1114144, 2, 65539, 1245183, 2, 65538, 1179648, 2, 131075, 1179649, 2, 131073, 1179650, 2, 131073, 1179651, 2, 131076, 1179652, 2, 131073, 1179653, 2, 131073, 1179654, 2, 131076, 1179655, 2, 131073, 1179656, 2, 131076, 1179657, 2, 131076, 1179658, 2, 131076, 1179659, 2, 131073, 1179660, 2, 131076, 1179661, 2, 131076, 1179662, 2, 131073, 1179663, 2, 131073, 1179664, 2, 131076, 1179665, 2, 131076, 1179666, 2, 131073, 1179667, 2, 131073, 1179668, 2, 131076, 1179669, 2, 131073, 1179670, 2, 131076, 1179671, 2, 131076, 1179672, 2, 131073, 1179673, 2, 131076, 1179674, 2, 131076, 1179675, 2, 131073, 1179676, 2, 131073, 1179677, 2, 131076, 1179678, 2, 131076, 1179679, 2, 131074, 1179680, 2, 65539, 1310719, 2, 65536, 1245184, 2, 196612, 1245185, 2, 196609, 1245186, 2, 196612, 1245187, 2, 196609, 1245188, 2, 196612, 1245189, 2, 196609, 1245190, 2, 196612, 1245191, 2, 196609, 1245192, 2, 196612, 1245193, 2, 196609, 1245194, 2, 196612, 1245195, 2, 196612, 1245196, 2, 196609, 1245197, 2, 196612, 1245198, 2, 196609, 1245199, 2, 196609, 1245200, 2, 196609, 1245201, 2, 196609, 1245202, 2, 196609, 1245203, 2, 196609, 1245204, 2, 196612, 1245205, 2, 196609, 1245206, 2, 196612, 1245207, 2, 196609, 1245208, 2, 196612, 1245209, 2, 196612, 1245210, 2, 196612, 1245211, 2, 196612, 1245212, 2, 196612, 1245213, 2, 196609, 1245214, 2, 196612, 1245215, 2, 196609, 1245216, 2, 196613 )

[node name="spr_logo_super" type="Sprite" parent="."]
position = Vector2( 442.799, 131.177 )
scale = Vector2( 0.51227, 0.51227 )
texture = ExtResource( 10 )

[node name="spr_logo_stevio" type="Sprite" parent="spr_logo_super"]
position = Vector2( 133.717, 79.0638 )
scale = Vector2( 1.9521, 1.9521 )
texture = ExtResource( 9 )

[node name="spr_66" type="Sprite" parent="spr_logo_super"]
position = Vector2( 370.485, -1.77563 )
scale = Vector2( 0.224074, 0.224074 )
texture = ExtResource( 11 )

[node name="spr_stevenface" type="Sprite" parent="."]
position = Vector2( 312, 180 )
rotation = -0.785398
scale = Vector2( 0.215481, 0.215481 )
texture = ExtResource( 6 )

[node name="spr_stevenface2" type="Sprite" parent="."]
position = Vector2( 712, 180 )
rotation = 0.785398
scale = Vector2( -0.212584, 0.212584 )
texture = ExtResource( 6 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 458.0
margin_top = 246.0
margin_right = 566.0
margin_bottom = 294.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 2 )
texture_focused = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Label" type="Label" parent="."]
margin_right = 200.0
margin_bottom = 14.0
text = "Version 1.0.0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="splash2" type="Sprite" parent="."]
position = Vector2( 512, 300 )
texture = ExtResource( 13 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
autoplay = true

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
